# AstroSim

./: .gitignore  CLAUDE.md  CODE_QUALITY_REPORT.md  DEPLOYMENT_GUIDE.md  GITHUB_RELEASE_NOTES.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USER_MANUAL.md  debug_frustum.py  debug_realistic_frustum.py  integration_test.py  pyproject.toml  pytest.ini  quick_windows_test.py  requirements-dev.txt  requirements.txt  setup.py  test_3d_integration.py  test_3d_lod.py  test_3d_structure.py  test_core_only.py  test_gui.py  test_implementation.py  test_interactive_features.py  test_orbit_cache.py  test_windows_compatibility.py  version_info.txt
.claude/: settings.local.json
data/: config.bak  config.json  planet_data.json
docs/: テスト計画書.md  ユーザーマニュアル.md  概要設計書.md  詳細設計書.md
src/: __init__.py  main.py
src/data/: __init__.py  config_manager.py  data_loader.py  planet_data.json  planet_repository.py
src/domain/: __init__.py  celestial_body.py  orbital_elements.py  planet.py  solar_system.py  sun.py
src/simulation/: __init__.py  orbit_calculator.py  physics_engine.py  time_manager.py
src/ui/: __init__.py  control_panel.py  info_panel.py  main_window.py
src/utils/: exceptions.py  frustum_culling.py  graceful_degradation.py  logging_config.py  memory_pool.py
src/visualization/: __init__.py  camera_controller.py  renderer_3d.py  scene_manager.py
tests/: conftest.py
tests/integration/: test_documentation_compliance.py  test_end_to_end.py  test_main_integration.py  test_ui_integration.py  test_user_scenarios.py
tests/mocks/: __init__.py  mock_data.py  mock_gui.py  mock_renderer.py
tests/performance/: __init__.py
tests/unit/: test_main.py
tests/unit/data/: test_config_manager.py  test_data_loader.py  test_planet_repository.py
tests/unit/domain/: test_celestial_body.py  test_orbital_elements.py  test_planet.py  test_solar_system.py
tests/unit/simulation/: test_orbit_calculator.py  test_physics_engine.py  test_time_manager.py
tests/unit/utils/: __init__.py  test_error_handling.py  test_exceptions.py  test_frustum_culling.py  test_logging_config.py  test_memory_pool.py
